versioned_docs/version-5.4/client-api/operations/counters/get-counters.mdx
---
title: "Get Counters Operation"
hide_table_of_contents: true
sidebar_label: Get Counters
sidebar_position: 0
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

export const supportedLanguages = ["csharp", "java", "php", "nodejs"];


# Get Counters Operation
<LanguageSwitcher supportedLanguages={supportedLanguages} />
<LanguageContent language="csharp">


This operation is used to get counters' values for a specific document.  
It can be used to get the value of a single counter, multiple counters' values, or all counters' values.

## Syntax

#### Get Single Counter

<TabItem value="get_single_counter" label="get_single_counter">
<CodeBlock language="csharp">
{`public GetCountersOperation(string docId, string counter, bool returnFullResults = false)
`}
</CodeBlock>
</TabItem>

| Parameters | | |
| ------------- | ------------- | ----- |
| **docId** | string | The ID of the document that holds the counters |
| **counter** | string | The name of the counter to get |
| **returnFullResults** | bool | A flag which indicates if the operation should include a dictionary of counter values per database node in the result  |

<Admonition type="info" title="Info">

**Return Full Results flag:**  

If RavenDB is running in a distributed cluster, and the database resides on several nodes,
a counter can have a different *local* value on each database node, and the total counter value is the
sum of all the local values of this counter from each node.  
In order to get the counter values per database node, set the `returnFullResults` flag to `true`

</Admonition>
#### Get Multiple Counters 

<TabItem value="get_multiple_counters" label="get_multiple_counters">
<CodeBlock language="csharp">
{`public GetCountersOperation(string docId, string[] counters, bool returnFullResults = false)
`}
</CodeBlock>
</TabItem>

| Parameters | | |
| ------------- | ------------- | ----- |
| **docId** | string | The ID of the document that holds the counters |
| **counters** | string[] | The names of the counters to get |
| **returnFullResults** | bool | A flag which indicates if the operation should include a dictionary of counter values per database node in the result  |
#### Get All Counters of a Document 

<TabItem value="get_all_counters" label="get_all_counters">
<CodeBlock language="csharp">
{`public GetCountersOperation(string docId, bool returnFullResults = false)
`}
</CodeBlock>
</TabItem>

| Parameters | | |
| ------------- | ------------- | ----- |
| **docId** | string | The ID of the document that holds the counters |
| **returnFullResults** | bool | A flag which indicates if the operation should include a dictionary of counter values per database node in the result  |



## Return Value

The operation returns a `CountersDetail` object, which holds a list of `CounterDetail` objects

<TabItem value="counters_detail" label="counters_detail">
<CodeBlock language="csharp">
{`public class CountersDetail
\{
    public List<CounterDetail> Counters;
\}
`}
</CodeBlock>
</TabItem>

<TabItem value="counter_detail" label="counter_detail">
<CodeBlock language="csharp">
{`public class CounterDetail
\{
    public string DocumentId; // ID of the document that holds the counter
    public string CounterName; // The counter name
    public long TotalValue; // Total counter value
    public Dictionary<string, long> CounterValues; // A dictionary of counter values per database node
    public long Etag; // Counter Etag
    public string ChangeVector; // Change vector of the counter
\}
`}
</CodeBlock>
</TabItem>



## Examples

Assume we have a `users/1` document that holds 3 counters:  
`likes`, `dislikes` and `downloads` -  with values 10, 20 and 30 (respectively)

### Example #1 : Get single counter

<TabItem value="get_counters1" label="get_counters1">
<CodeBlock language="csharp">
{`var operationResult = store.Operations
    .Send(new GetCountersOperation("users/1", "likes"));
`}
</CodeBlock>
</TabItem>

#### Result:

<TabItem value="json" label="json">
<CodeBlock language="json">
{`\{
	"Counters": 
    [
		\{
			"DocumentId" : "users/1",
			"CounterName" : "likes",
			"TotalValue" : 10,
			"CounterValues" : null
		\}
	]
\}
`}
</CodeBlock>
</TabItem>

### Example #2 : Get multiple counters 

<TabItem value="get_counters2" label="get_counters2">
<CodeBlock language="csharp">
{`var operationResult = store.Operations
    .Send(new GetCountersOperation("users/1", new []\{"likes", "dislikes" \}));
`}
</CodeBlock>
</TabItem>

#### Result:

<TabItem value="json" label="json">
<CodeBlock language="json">
{`\{
	"Counters": 
    [
		\{
			"DocumentId" : "users/1",
			"CounterName" : "likes",
			"TotalValue" : 10,
			"CounterValues" : null
		\},
        \{
			"DocumentId" : "users/1",
			"CounterName" : "dislikes",
			"TotalValue" : 20,
			"CounterValues" : null
		\}
	]
\}
`}
</CodeBlock>
</TabItem>

### Example #3 : Get all counters 

<TabItem value="get_counters3" label="get_counters3">
<CodeBlock language="csharp">
{`var operationResult = store.Operations
    .Send(new GetCountersOperation("users/1"));
`}
</CodeBlock>
</TabItem>

#### Result:

<TabItem value="json" label="json">
<CodeBlock language="json">
{`\{
	"Counters": 
    [
		\{
			"DocumentId" : "users/1",
			"CounterName" : "likes",
			"TotalValue" : 10,
			"CounterValues" : null
		\},
        \{
			"DocumentId" : "users/1",
			"CounterName" : "dislikes",
			"TotalValue" : 20,
			"CounterValues" : null
		\},
        \{
			"DocumentId" : "users/1",
			"CounterName" : "downloads",
			"TotalValue" : 30,
			"CounterValues" : null
		\}
	]
\}
`}
</CodeBlock>
</TabItem>

### Example #4 : Include full values in the result

<TabItem value="get_counters4" label="get_counters4">
<CodeBlock language="csharp">
{`var operationResult = store.Operations
    .Send(new GetCountersOperation("users/1", "likes", true));
`}
</CodeBlock>
</TabItem>

#### Result:

Assuming a 3-node cluster, the distribution of the counter's value to nodes A, B, and C could be as follows:

<TabItem value="json" label="json">
<CodeBlock language="json">
{`\{
	"Counters": 
    [
		\{
			"DocumentId" : "users/1",
			"CounterName" : "likes",
			"TotalValue" : 10,
			"CounterValues" : 
            \{
                "A:35-UuCp420vs0u+URADcGVURA" : 5,
                "B:83-SeCFU29daUOxfjUcAlLiJw" : 3,
                "C:27-7i7GP8bOOkGYLNflO/rSeg" : 2,
            \}
		\}
	]
\}
`}
</CodeBlock>
</TabItem>




</LanguageContent>
<LanguageContent language="java">


This operation is used to get counters' values for a specific document.  
It can be used to get the value of a single counter, multiple counters' values, or all counters' values.

## Syntax

#### Get Single Counter

<TabItem value="get_single_counter" label="get_single_counter">
<CodeBlock language="java">
{`public GetCountersOperation(String docId, String counter)
public GetCountersOperation(String docId, String counter, boolean returnFullResults)
`}
</CodeBlock>
</TabItem>

| Parameters | | |
| ------------- | ------------- | ----- |
| **docId** | String | The ID of the document that holds the counters |
| **counter** | String | The name of the counter to get |
| **returnFullResults** | boolean | A flag which indicates if the operation should include a dictionary of counter values per database node in the result  |

<Admonition type="info" title="Info">

**Return Full Results flag**:  

If RavenDB is running in a distributed cluster, and the database resides on several nodes,
a counter can have a different *local* value on each database node, and the total counter value is the
sum of all the local values of this counter from each node.  
In order to get the counter values per database node, set the `returnFullResults` flag to `true`

</Admonition>
#### Get Multiple Counters 

<TabItem value="get_multiple_counters" label="get_multiple_counters">
<CodeBlock language="java">
{`public GetCountersOperation(String docId, String[] counters)
public GetCountersOperation(String docId, String[] counters, boolean returnFullResults)
`}
</CodeBlock>
</TabItem>

| Parameters | | |
| ------------- | ------------- | ----- |
| **docId** | String | The ID of the document that holds the counters |
| **counters** | String[] | The names of the counters to get |
| **returnFullResults** | boolean | A flag which indicates if the operation should include a dictionary of counter values per database node in the result  |
#### Get All Counters of a Document 

<TabItem value="get_all_counters" label="get_all_counters">
<CodeBlock language="java">
{`public GetCountersOperation(String docId)
public GetCountersOperation(String docId, boolean returnFullResults)
`}
</CodeBlock>
</TabItem>

| Parameters | | |
| ------------- | ------------- | ----- |
| **docId** | String | The ID of the document that holds the counters |
| **returnFullResults** | boolean | A flag which indicates if the operation should include a dictionary of counter values per database node in the result  |



## Return Value

The operation returns a `CountersDetail` object, which holds a list of `CounterDetail` objects

<TabItem value="counters_detail" label="counters_detail">
<CodeBlock language="java">
{`public class CountersDetail \{

    private List<CounterDetail> counters;

    // getters and setters
\}
`}
</CodeBlock>
</TabItem>

<TabItem value="counter_detail" label="counter_detail">
<CodeBlock language="java">
{`public class CounterDetail \{
    private String documentId; // ID of the document that holds the counter
    private String counterName; // The counter name
    private long totalValue; // Total counter value
    private long etag; // Counter Etag
    private Map<String, Long> counterValues; // A map of counter values per database node

    private String changeVector; // Change vector of the counter

    // getters and setters
\}
`}
</CodeBlock>
</TabItem>



## Examples

Assume we have a `users/1` document that holds 3 counters:  
`likes`, `dislikes` and `downloads` -  with values 10, 20 and 30 (respectively)

### Example #1 : Get single counter

<TabItem value="get_counters1" label="get_counters1">
<CodeBlock language="java">
{`CountersDetail operationResult = store.operations()
    .send(new GetCountersOperation("users/1", "likes"));
`}
</CodeBlock>
</TabItem>

#### Result:

<TabItem value="json" label="json">
<CodeBlock language="json">
{`\{
	"Counters": 
    [
		\{
			"DocumentId" : "users/1",
			"CounterName" : "likes",
			"TotalValue" : 10,
			"CounterValues" : null
		\}
	]
\}
`}
</CodeBlock>
</TabItem>

### Example #2 : Get multiple counters 

<TabItem value="get_counters2" label="get_counters2">
<CodeBlock language="java">
{`CountersDetail operationResult = store.operations()
    .send(new GetCountersOperation("users/1", new String[]\{ "likes", "dislikes" \}));
`}
</CodeBlock>
</TabItem>

#### Result:

<TabItem value="json" label="json">
<CodeBlock language="json">
{`\{
	"Counters": 
    [
		\{
			"DocumentId" : "users/1",
			"CounterName" : "likes",
			"TotalValue" : 10,
			"CounterValues" : null
		\},
        \{
			"DocumentId" : "users/1",
			"CounterName" : "dislikes",
			"TotalValue" : 20,
			"CounterValues" : null
		\}
	]
\}
`}
</CodeBlock>
</TabItem>

### Example #3 : Get all counters 

<TabItem value="get_counters3" label="get_counters3">
<CodeBlock language="java">
{`CountersDetail operationResult = store.operations()
    .send(new GetCountersOperation("users/1"));
`}
</CodeBlock>
</TabItem>

#### Result:

<TabItem value="json" label="json">
<CodeBlock language="json">
{`\{
	"Counters": 
    [
		\{
			"DocumentId" : "users/1",
			"CounterName" : "likes",
			"TotalValue" : 10,
			"CounterValues" : null
		\},
        \{
			"DocumentId" : "users/1",
			"CounterName" : "dislikes",
			"TotalValue" : 20,
			"CounterValues" : null
		\},
        \{
			"DocumentId" : "users/1",
			"CounterName" : "downloads",
			"TotalValue" : 30,
			"CounterValues" : null
		\}
	]
\}
`}
</CodeBlock>
</TabItem>

### Example #4 : Include full values in the result

<TabItem value="get_counters4" label="get_counters4">
<CodeBlock language="java">
{`CountersDetail operationResult = store.operations()
    .send(new GetCountersOperation("users/1", "likes", true));
`}
</CodeBlock>
</TabItem>

#### Result:

Assuming a 3-node cluster, the distribution of the counter's value to nodes A, B, and C could be as follows:

<TabItem value="json" label="json">
<CodeBlock language="json">
{`\{
	"Counters": 
    [
		\{
			"DocumentId" : "users/1",
			"CounterName" : "likes",
			"TotalValue" : 10,
			"CounterValues" : 
            \{
                "A:35-UuCp420vs0u+URADcGVURA" : 5,
                "B:83-SeCFU29daUOxfjUcAlLiJw" : 3,
                "C:27-7i7GP8bOOkGYLNflO/rSeg" : 2,
            \}
		\}
	]
\}
`}
</CodeBlock>
</TabItem>




</LanguageContent>
<LanguageContent language="php">


This operation is used to get counters' values for a specific document.  
It can be used to get the value of a single counter, multiple counters' values, or all counters' values.

## Syntax

#### `GetCountersOperation`

Use `GetCountersOperation` to get counters.  
Find usage examples below for getting a single counter, multiple counters, or all document counters. 
<TabItem value="get_counter_constructor" label="get_counter_constructor">
<CodeBlock language="php">
{`class GetCountersOperation \{
    public function __construct(?string $docId, string|StringArray|array|null $counters = 
        null, bool $returnFullResults = false) \{ ... \}
\}
`}
</CodeBlock>
</TabItem>

| Parameters | | |
| ------------- | ------------- | ----- |
| **docId** | string | The ID of the document that holds the counters |
| **counter** | `string` or `StringArray` or `array` or `null` | The name or names array of the counter/s to get, <br/>or `null` for all document counters |
| **returnFullResults** | bool | A flag which indicates if the operation should include a dictionary of counter values per database node in the result |
#### Get Single Counter

<TabItem value="get_single_counter" label="get_single_counter">
<CodeBlock language="php">
{`$docId = "users/1";
$counter = "likes";
$returnFullResults = false;

$operation = new GetCountersOperation($docId, $counter, $returnFullResults);
`}
</CodeBlock>
</TabItem>

| Parameters | | |
| ------------- | ------------- | ----- |
| **docId** | string | The ID of the document that holds the counters |
| **counter** | string | The name of the counter to get |
| **returnFullResults** | bool | A flag which indicates if the operation should include a dictionary of counter values per database node in the result |

<Admonition type="info" title="Info">

**Return Full Results flag:**  

If RavenDB is running in a distributed cluster, and the database resides on several nodes,
a counter can have a different *local* value on each database node, and the total counter value is the
sum of all the local values of this counter from each node.  
In order to get the counter values per database node, set the `returnFullResults` flag to `true`

</Admonition>
#### Get Multiple Counters 

<TabItem value="get_multiple_counters" label="get_multiple_counters">
<CodeBlock language="php">
{`$docId = "users/1";
$counters = [ "likes", "score"];
$returnFullResults = false;

$operation = new GetCountersOperation($docId, $counters, $returnFullResults);
`}
</CodeBlock>
</TabItem>

| Parameters | | |
| ------------- | ------------- | ----- |
| **docId** | string | The ID of the document that holds the counters |
| **counters** | `StringArray` or `array` | The names of the counters to get |
| **returnFullResults** | bool | A flag which indicates if the operation should include a dictionary of counter values per database node in the result |
#### Get All Counters of a Document 

<TabItem value="get_all_counters" label="get_all_counters">
<CodeBlock language="php">
{`$docId = "users/1";
$returnFullResults = false;

$operation = new GetCountersOperation($docId, null, $returnFullResults);
`}
</CodeBlock>
</TabItem>

| Parameters | | |
| ------------- | ------------- | ----- |
| **docId** | string | The ID of the document that holds the counters |
| **returnFullResults** | bool | A flag which indicates if the operation should include a dictionary of counter values per database node in the result |



## Return Value

The operation returns a `CountersDetail` object, which holds a list of `CounterDetail` objects

<TabItem value="counters_detail" label="counters_detail">
<CodeBlock language="php">
{`class CountersDetail
\{
    private ?CounterDetailList $counters = null;
\}
`}
</CodeBlock>
</TabItem>

<TabItem value="counter_detail" label="counter_detail">
<CodeBlock language="php">
{`class CounterDetail
\{
    private ?string $documentId = null;     // ID of the document that holds the counter
    private ?string $counterName = null;    // The counter name
    private ?int $totalValue = null;        // Total counter value
    private ?int $etag = null;              // Counter Etag
    private ?array $counterValues = [];     // A dictionary of counter values per database node

    private ?string $changeVector = null;   // Change vector of the counter

    // ... getters and setters
\}

class CounterDetailList extends TypedList
\{
    public function __construct()
    \{
        parent::__construct(CounterDetail::class);
        $this->setNullAllowed(true);
    \}
\}
`}
</CodeBlock>
</TabItem>



## Examples

Assume we have a `users/1` document that holds 3 counters:  
`likes`, `dislikes` and `downloads` -  with values 10, 20 and 30 (respectively)

### Example #1 : Get single counter

<TabItem value="get_counters1" label="get_counters1">
<CodeBlock language="php">
{`/** @var CountersDetail  $operationResult */
$operationResult = $store
    ->operations()
    ->send(new GetCountersOperation("users/1", "likes"));
`}
</CodeBlock>
</TabItem>

#### Result:

<TabItem value="json" label="json">
<CodeBlock language="json">
{`\{
	"Counters": 
    [
		\{
			"DocumentId" : "users/1",
			"CounterName" : "likes",
			"TotalValue" : 10,
			"CounterValues" : null
		\}
	]
\}
`}
</CodeBlock>
</TabItem>

### Example #2 : Get multiple counters 

<TabItem value="get_counters2" label="get_counters2">
<CodeBlock language="php">
{`/** @var CountersDetail $operationResult */
$operationResult = $store
    ->operations()
    ->send(new GetCountersOperation("users/1", [ "likes", "dislikes" ]));
`}
</CodeBlock>
</TabItem>

#### Result:

<TabItem value="json" label="json">
<CodeBlock language="json">
{`\{
	"Counters": 
    [
		\{
			"DocumentId" : "users/1",
			"CounterName" : "likes",
			"TotalValue" : 10,
			"CounterValues" : null
		\},
        \{
			"DocumentId" : "users/1",
			"CounterName" : "dislikes",
			"TotalValue" : 20,
			"CounterValues" : null
		\}
	]
\}
`}
</CodeBlock>
</TabItem>

### Example #3 : Get all counters 

<TabItem value="get_counters3" label="get_counters3">
<CodeBlock language="php">
{`/** @var CountersDetail $operationResult */
$operationResult = $store->operations()
    ->send(new GetCountersOperation("users/1"));
`}
</CodeBlock>
</TabItem>

#### Result:

<TabItem value="json" label="json">
<CodeBlock language="json">
{`\{
	"Counters": 
    [
		\{
			"DocumentId" : "users/1",
			"CounterName" : "likes",
			"TotalValue" : 10,
			"CounterValues" : null
		\},
        \{
			"DocumentId" : "users/1",
			"CounterName" : "dislikes",
			"TotalValue" : 20,
			"CounterValues" : null
		\},
        \{
			"DocumentId" : "users/1",
			"CounterName" : "downloads",
			"TotalValue" : 30,
			"CounterValues" : null
		\}
	]
\}
`}
</CodeBlock>
</TabItem>

### Example #4 : Include full values in the result

<TabItem value="get_counters4" label="get_counters4">
<CodeBlock language="php">
{`/** @var CountersDetail $operationResult */
$operationResult = $store
    ->operations()
    ->send(new GetCountersOperation("users/1", "likes", true));
`}
</CodeBlock>
</TabItem>

#### Result:

Assuming a 3-node cluster, the distribution of the counter's value to nodes A, B, and C could be as follows:

<TabItem value="json" label="json">
<CodeBlock language="json">
{`\{
	"Counters": 
    [
		\{
			"DocumentId" : "users/1",
			"CounterName" : "likes",
			"TotalValue" : 10,
			"CounterValues" : 
            \{
                "A:35-UuCp420vs0u+URADcGVURA" : 5,
                "B:83-SeCFU29daUOxfjUcAlLiJw" : 3,
                "C:27-7i7GP8bOOkGYLNflO/rSeg" : 2,
            \}
		\}
	]
\}
`}
</CodeBlock>
</TabItem>




</LanguageContent>
<LanguageContent language="nodejs">


This operation is used to get counters' values for a specific document.  
It can be used to get the value of a single counter, multiple counters' values, or all counters' values.

## Syntax

<TabItem value="syntax_1" label="syntax_1">
<CodeBlock language="js">
{`// Get single counter
const getCountersOp = new GetCountersOperation(docId, counter);
const getCountersOp = new GetCountersOperation(docId, counter, returnFullResults = false);
`}
</CodeBlock>
</TabItem>

<TabItem value="syntax_2" label="syntax_2">
<CodeBlock language="js">
{`// Get multiple counters
const getCountersOp = new GetCountersOperation(docId, counters);
const getCountersOp = new GetCountersOperation(docId, counters, returnFullResults = false);
`}
</CodeBlock>
</TabItem>

<TabItem value="syntax_3" label="syntax_3">
<CodeBlock language="js">
{`// Get all counters of a document
const getCountersOp = new GetCountersOperation(docId);
`}
</CodeBlock>
</TabItem>

| Parameter             | Type     | Description                                                                                                           |
|-----------------------|----------|-----------------------------------------------------------------------------------------------------------------------|
| **docId**             | string   | The ID of the document that holds the counters                                                                        |
| **counter**           | string   | The name of the counter to get                                                                                        |
| **counters**          | string[] | The list of counter names to get                                                                                     |
| **returnFullResults** | boolean  | A flag which indicates if the operation should include a dictionary of counter values per database node in the result |

<Admonition type="info" title="Info">

**The full results flag:**  

If RavenDB is running in a distributed cluster, and the database resides on several nodes,  
then a counter can have a different *local* value on each database node.  
The total counter value is the sum of all the local values of this counter from each node.  
To get the counter values per database node, set the `returnFullResults` flag to `true`.

</Admonition>



## Return Value

The operation returns a `CountersDetail` object, which holds a list of `CounterDetail` objects

<TabItem value="syntax_4" label="syntax_4">
<CodeBlock language="js">
{`// The CounterDetails object:
// ==========================
\{
    // A list of "CounterDetail" objects;
    counters;
\}
`}
</CodeBlock>
</TabItem>

<TabItem value="syntax_5" label="syntax_5">
<CodeBlock language="js">
{`// The CounterDetail object:
// =========================
\{
    // ID of the document that holds the counter;
    documentId; // string
    
    // The counter name
    counterName; //string

    // Total counter value
    totalValue; // number
    
    // A dictionary of counter values per database node
    counterValues?; 
    
    // Etag of counter
    etag?; // number;

    // Change vector of counter
    changeVector?; // string
\}
`}
</CodeBlock>
</TabItem>



## Examples

Assume we have a `users/1` document that holds 3 counters:  
`Likes`, `Dislikes` and `Downloads` -  with values 10, 20 and 30 (respectively)
### Example #1 : Get single counter

<TabItem value="example_1" label="example_1">
<CodeBlock language="js">
{`// Define the get counters operation
const getCountersOp = new GetCountersOperation("users/1", "Likes");

// Execute the operation by passing it to operations.send
const result = await documentStore.operations.send(getCountersOp);
const counters = result.counters;
`}
</CodeBlock>
</TabItem>

#### Result:

<TabItem value="json" label="json">
<CodeBlock language="json">
{`\{
	"counters": 
    [
		\{
			"documentId"    : "users/1",
			"counterName"   : "Likes",
			"totalValue"    : 10,
			"counterValues" : null
		\}
	]
\}
`}
</CodeBlock>
</TabItem>

### Example #2 : Get multiple counters 

<TabItem value="example_2" label="example_2">
<CodeBlock language="js">
{`const getCountersOp = new GetCountersOperation("users/1", ["Likes", "Dislikes"]);

const result = await documentStore.operations.send(getCountersOp);
const counters = result.counters;
`}
</CodeBlock>
</TabItem>

#### Result:

<TabItem value="json" label="json">
<CodeBlock language="json">
{`\{
	"counters": 
    [
		\{
			"documentId"    : "users/1",
			"counterName"   : "Likes",
			"totalValue"    : 10,
			"counterValues" : null
		\},
        \{
			"documentId"    : "users/1",
			"counterName"   : "Dislikes",
			"totalValue"    : 20,
			"counterValues" : null
		\}
	]
\}
`}
</CodeBlock>
</TabItem>

### Example #3 : Get all counters 

<TabItem value="example_3" label="example_3">
<CodeBlock language="js">
{`const getCountersOp = new GetCountersOperation("users/1");

const result = await documentStore.operations.send(getCountersOp);
const counters = result.counters;
`}
</CodeBlock>
</TabItem>

#### Result:

<TabItem value="json" label="json">
<CodeBlock language="json">
{`\{
	"counters": 
    [
		\{
			"documentId"    : "users/1",
			"counterName"   : "Likes",
			"totalValue"    : 10,
			"counterValues" : null
		\},
        \{
			"documentId"    : "users/1",
			"counterName"   : "Dislikes",
			"totalValue"    : 20,
			"counterValues" : null
		\},
        \{
			"documentId"    : "users/1",
			"counterName"   : "Downloads",
			"totalValue"    : 30,
			"counterValues" : null
		\}
	]
\}
`}
</CodeBlock>
</TabItem>

### Example #4 : Include full values in the result

<TabItem value="example_4" label="example_4">
<CodeBlock language="js">
{`const getCountersOp = new GetCountersOperation("users/1", "Likes", true);

const result = await documentStore.operations.send(getCountersOp);
const counters = result.counters;
`}
</CodeBlock>
</TabItem>

#### Result:

Assuming a 3-node cluster, the distribution of the counter's value to nodes A, B, and C could be as follows:

<TabItem value="json" label="json">
<CodeBlock language="json">
{`\{
	"counters": 
    [
		\{
			"documentId"    : "users/1",
			"counterName"   : "Likes",
			"totalValue"    : 10,
			"counterValues" : 
            \{
                "A:35-UuCp420vs0u+URADcGVURA" : 5,
                "B:83-SeCFU29daUOxfjUcAlLiJw" : 3,
                "C:27-7i7GP8bOOkGYLNflO/rSeg" : 2,
            \}
		\}
	]
\}
`}
</CodeBlock>
</TabItem>




</LanguageContent>

<!---
### Operations
- [What are Operations](../../../client-api/operations/what-are-operations)
- [Counter Batch Operation](../../../client-api/operations/counters/counter-batch)


-->